# Prueba_emociones

./: .gitignore  README.md  Untitled4.ipynb  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  untitled4 (1).ipynb  untitled4.ipynb
docs/: api.md  index.md  quickstart.md
examples/: analysis.ipynb
prueba_emociones/: __init__.py  cli.py  data.py  model.py
src/prueba_emociones/: __init__.py
src/prueba_emociones/cli/: main.py
src/prueba_emociones/data/: loading.py
src/prueba_emociones/features/: __init__.py  feature_pipeline.py  intensity_flags.py  vectorizers.py
src/prueba_emociones/models/: random_forest.py
src/prueba_emociones/preprocessing/: cleaning.py  spellcheck.py
tests/: conftest.py  test_feature_pipeline.py  test_import.py
tests/cli/: test_main.py
tests/data/: test_loading.py
tests/models/: test_random_forest.py
tests/preprocessing/: conftest.py  test_cleaning.py  test_spellcheck.py
