[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prueba-emociones"
version = "0.1.0"
description = "CLI para entrenamiento y predicción de emociones"
authors = [{name = "Equipo", email = "equipo@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
prueba-emociones = "prueba_emociones.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
